--- a/index.html
+++ b/index.html
@@ -1058,34 +1058,34 @@
                                     <ul class="ul__reset">
                                         <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
                                             <div class="heading-mask_el heading-mask_el__deep">
-                                                <a href="https://dribbble.com/phamduyminh" class="contact_link" target="_blank">AWWWARDS</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="contact_link" target="_blank">AWWWARDS</a>
                                             </div>
                                             <div class="heading-mask_el heading-mask_el__masking">
-                                                <a href="https://dribbble.com/phamduyminh" class="text-dark contact_link" target="_blank">WORK IN PROGESS</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank">WORK IN PROGESS</a>
                                             </div>
                                         </li>
                                         <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
                                             <div class="heading-mask_el heading-mask_el__deep">
-                                                <a href="https://www.youtube.com/@MinhPhamDesign" class="contact_link" target="_blank">INSTAGRAM</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="contact_link" target="_blank">INSTAGRAM</a>
                                             </div>
                                             <div class="heading-mask_el heading-mask_el__masking">
-                                                <a href="https://www.youtube.com/@MinhPhamDesign" class="text-dark contact_link" target="_blank">TALK TO ME HERE</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank">TALK TO ME HERE</a>
                                             </div>
                                         </li>
                                         <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
                                             <div class="heading-mask_el heading-mask_el__deep">
-                                                <a href="https://www.linkedin.com/in/minh-pham-9b67ba52/" class="contact_link" target="_blank">DRIBBBLE</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="contact_link" target="_blank">DRIBBBLE</a>
                                             </div>
                                             <div class="heading-mask_el heading-mask_el__masking">
-                                                <a href="https://www.linkedin.com/in/minh-pham-9b67ba52/" class="text-dark contact_link" target="_blank">INCOMING</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank">INCOMING</a>
                                             </div>
                                         </li>
                                         <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
                                             <div class="heading-mask_el heading-mask_el__deep">
-                                                <a href="https://www.linkedin.com/in/minh-pham-9b67ba52/" class="contact_link" target="_blank">PATREON</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="contact_link" target="_blank">PATREON</a>
                                             </div>
                                             <div class="heading-mask_el heading-mask_el__masking">
-                                                <a href="https://www.linkedin.com/in/minh-pham-9b67ba52/" class="text-dark contact_link" target="_blank">WORK IN PROGRESS</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank">WORK IN PROGRESS</a>
                                             </div>
                                         </li>
                                     </ul>
@@ -1095,34 +1095,34 @@
                                     <ul class="ul__reset">
                                         <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
                                             <div class="heading-mask_el heading-mask_el__deep">
-                                                <a href="https://www.instagram.com/minhpham.design" class="contact_link" target="_blank">BEHANCE</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="contact_link" target="_blank">BEHANCE</a>
                                             </div>
                                             <div class="heading-mask_el heading-mask_el__masking">
-                                                <a href="https://www.instagram.com/minhpham.design" class="text-dark contact_link" target="_blank">COMING SOON</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank">COMING SOON</a>
                                             </div>
                                         </li>
                                         <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
                                             <div class="heading-mask_el heading-mask_el__deep">
-                                                <a href="https://www.facebook.com/pham.d.minh" class="contact_link" target="_blank">FACEBOOK</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="contact_link" target="_blank">FACEBOOK</a>
                                             </div>
                                             <div class="heading-mask_el heading-mask_el__masking">
-                                                <a href="https://www.facebook.com/pham.d.minh" class="text-dark contact_link" target="_blank">WHY NOT TRY</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank">WHY NOT TRY</a>
                                             </div>
                                         </li>
                                         <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
                                             <div class="heading-mask_el heading-mask_el__deep">
-                                                <a href="https://www.behance.net/phamduyminh" class="contact_link" target="_blank">LINKEDINE</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="contact_link" target="_blank">LINKEDINE</a>
                                             </div>
                                             <div class="heading-mask_el heading-mask_el__masking">
-                                                <a href="https://www.behance.net/phamduyminh" class="text-dark contact_link" target="_blank">FIND ME HERE</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank">FIND ME HERE</a>
                                             </div>
                                         </li>
                                         <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
                                             <div class="heading-mask_el heading-mask_el__deep">
-                                                <a href="https://www.behance.net/phamduyminh" class="contact_link" target="_blank">HAVE A GOD DAY</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="contact_link" target="_blank">HAVE A GOD DAY</a>
                                             </div>
                                             <div class="heading-mask_el heading-mask_el__masking">
-                                                <a href="https://www.behance.net/phamduyminh" class="text-dark contact_link" target="_blank">SEE YOU SOON BUDDY</a>
+                                                <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank">SEE YOU SOON BUDDY</a>
                                             </div>
                                         </li>
                                     </ul>
@@ -1135,14 +1135,14 @@
                                             <div class="heading-mask contact_info contact_info__top js-cursor-contract heading-mask__now">
                                                 <div class="heading-mask_el heading-mask_el__deep">
                                                     <span class="h4 d-block">Email</span>
-                                                    <a class="sub-content" href="malito:kireidesign@gmil.com">
-                                                        <span class="__cf_email__" >kireidesign@gmil.com</span>
+                                                    <a class="sub-content" href="malito:mobilochkaa870@gmail.com">
+                                                        <span class="__cf_email__" >mobilochkaa870@gmail.com</span>
                                                     </a>
                                                 </div>
                                                 <div class="heading-mask_el heading-mask_el__masking">
                                                     <span class="h4 d-block text-dark">DONT'T BE AFRAID I DON"T BITE</span>
-                                                    <a class="sub-content text-dark" href="malito:kireidesign@gmil.com">
-                                                        <span class="__cf_email__" >kireidesign@gmil.com</span>
+                                                    <a class="sub-content text-dark" href="mobilochkaa870@gmail.com">
+                                                        <span class="__cf_email__" >mobilochkaa870@gmail.com</span>
                                                     </a>
                                                 </div>
                                             </div>
@@ -1151,11 +1151,11 @@
                                             <div class="heading-mask contact_info js-cursor-contract heading-mask__now">
                                                 <div class="heading-mask_el heading-mask_el__deep">
                                                     <span class="h4 d-block">Phone</span>
-                                                    <a class="sub-content" href="tel:+33 687998015">+33 687998015</a>
+                                                    <a class="sub-content" href="tel:+33 687998015">+48 784738407</a>
                                                 </div>
                                                 <div class="heading-mask_el heading-mask_el__masking">
                                                     <span class="h4 d-block text-dark">ONLY BY MESSAGE</span>
-                                                    <a class="sub-content text-dark" href="tel:++33 687998015">+33 687998015</a>
+                                                    <a class="sub-content text-dark" href="tel:++33 687998015">+48 784738407</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -1815,32 +1815,32 @@
                             <div class="col-lg-3 col-sm-5 offset-lg-2 offset-sm-1 col-12">
                                 <ul class="ul__reset">
                                     <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
-                                        <a href="https://dribbble.com/phamduyminh" class="text-dark contact_link" target="_blank"></a>
+                                        <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank"></a>
                                     </li>
                                     <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
-                                        <a href="https://www.youtube.com/@MinhPhamDesign" class="text-dark contact_link" target="_blank"></a>
+                                        <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank"></a>
                                     </li>
                                     <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
-                                        <a href="https://www.linkedin.com/in/minh-pham-9b67ba52/" class="text-dark contact_link" target="_blank"></a>
+                                        <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank"></a>
                                     </li>
                                     <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
-                                        <a href="https://www.linkedin.com/in/minh-pham-9b67ba52/" class="text-dark contact_link" target="_blank"></a>
+                                        <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank"></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="col-lg-3 col-sm-5 col-12">
                                 <ul class="ul__reset">
                                     <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
-                                        <a href="https://www.instagram.com/minhpham.design" class="text-dark contact_link" target="_blank"></a>
+                                        <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank"></a>
                                     </li>
                                     <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
-                                        <a href="https://www.facebook.com/pham.d.minh" class="text-dark contact_link" target="_blank"></a>
+                                        <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank"></a>
                                     </li>
                                     <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font">
-                                        <a href="https://www.behance.net/phamduyminh" class="text-dark contact_link" target="_blank"></a>
+                                        <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank"></a>
                                     </li>
                                     <li class="heading-mask social-link js-cursor-contract heading-mask__now primary-font ">
-                                        <a href="https://www.linkedin.com/in/minh-pham-9b67ba52/" class="text-dark contact_link" target="_blank"></a>
+                                        <a href="https://www.linkedin.com/services/page/5419643282930b9b95/" class="text-dark contact_link" target="_blank"></a>
                                     </li>
                                 </ul>
                             </div>
@@ -1870,22 +1870,22 @@
         <footer id="js-footer" class="footer">
             <ul class="footer_socials ul__reset">
                 <li class="social js-social">
-                    <a class="social_link social_link__dribbble" href="https://dribbble.com/phamduyminh" target="_blank" aria-label="Visit my Dribbble profile">
+                    <a class="social_link social_link__dribbble" href="https://www.linkedin.com/services/page/5419643282930b9b95/" target="_blank" aria-label="Visit my Dribbble profile">
                         <img src="assets/icons/ic-ig.svg" class="svg" alt="Instagram icon">
                     </a>
                 </li>
                 <li class="social js-social">
-                    <a class="social_link social_link__instagram" href="https://www.instagram.com/minhpham.design" target="_blank" aria-label="Visit my Instagram profile">
+                    <a class="social_link social_link__instagram" href="https://www.linkedin.com/services/page/5419643282930b9b95/" target="_blank" aria-label="Visit my Instagram profile">
                         <img src="assets/icons/ic-in.svg" class="svg" alt="LinkedIn icon">
                     </a>
                 </li>
                 <li class="social js-social">
-                    <a class="social_link social_link__youtube" href="https://www.youtube.com/@MinhPhamDesign" target="_blank" aria-label="Visit my YouTube channel">
+                    <a class="social_link social_link__youtube" href="https://www.linkedin.com/services/page/5419643282930b9b95/" target="_blank" aria-label="Visit my YouTube channel">
                         <img src="assets/icons/ic-ytb.svg" class="svg" alt="YouTube icon">
                     </a>
                 </li>
                 <li class="social js-social">
-                    <a class="social_link social_link__linkedin" href="https://www.linkedin.com/in/minh-pham-9b67ba52/" target="_blank" aria-label="Visit my LinkedIn profile">
+                    <a class="social_link social_link__linkedin" href="https://www.linkedin.com/services/page/5419643282930b9b95/" target="_blank" aria-label="Visit my LinkedIn profile">
                         <img src="assets/icons/Facebook.svg" class="svg" alt="Facebook icon">
                     </a>
                 </li>
